--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
     <body>
         <p>It was a dark and stormy night... I went out  into the storm and I got lost in the woods. It was really scarry but I finally made it back safely to my house. Since that dreadful day I have not gone out at night again. I fear storms and do not want to take a chance ever again. </p>
 
-        <p>The next day was a lot better. The storm had passed and the sun was shining. I stepped outside of my front door and felt the fear instantly lifted. My stomach grumbled. It was time to eat.</p>
+        <p>The next day was a lot better. The storm had passed and the sun was shining. I stepped outside of my front door and felt the fear instantly lifted. My stomach grumbled. It was time to eat.</p> 
+
+        I love eating! I can enumerate several types of food that comes to mind right now. I like italian food, chinese, thai and most american fast food as well. I enjoy cooking but I mostly cook the same mush every day.
     </body>
 </html>
