--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="style.css">
+        </head>
     <body>
         <p>It was a dark and stormy night... I went out  into the storm and I got lost in the woods. It was really scarry but I finally made it back safely to my house. Since that dreadful day I have not gone out at night again. I fear storms and do not want to take a chance ever again. </p>
 
